# pmgnt

./: .gitignore  Cargo.toml  clean.sh  pkgbuild.template.yml  pkgbuild.yml  test.db  test.yml
bin-repo/: Cargo.toml
bin-repo/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  pi_statics.rs  pkgbuild_statics.rs  statics.rs
lib/src/enums/: architectures.rs  build_options.rs  licenses.rs  mod.rs  repo_protocols.rs
lib/src/structs/: bindb.rs  binrepo.rs  mod.rs  package_build.rs  package_manifest.rs  piconf.rs  scripts.rs
lib/src/utils/: archive.rs  compress.rs  decompress.rs  download.rs  install.rs  mod.rs  prepare.rs  read_file.rs  remove.rs  run_script.rs
makepkg/: Cargo.toml
makepkg/src/: download.rs  git.rs  main.rs
pi/: Cargo.toml
pi/src/: main.rs
repo/: Cargo.toml
repo/src/: main.rs
server/: Cargo.toml
source-repo/: Cargo.toml
source-repo/src/: main.rs
