[package]
name = "lib"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"]}
serde_yaml = "*"
lazy_static = "*"
tokio = {version = "*", features = ["full"]}
reqwest = "*"
colored = "*"
indicatif = "*"
tar = "*"
zstd = "*"
clap = "*"
error-chain = "*"
anyhow = "*"
shellfn = "*"
url =  "*"
git2 = "*"
walkdir = "*"
sha2 = "*"
solvent = "*"