[package]
name = "pi"
version = "0.1.0"
authors = ["Brilliant PHAL"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "*"
zstd = "*"
flate2 = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"]}
serde_yaml = "*"